--- a/app/V/admin/category_list.html
+++ b/app/V/admin/category_list.html
@@ -23,7 +23,7 @@
                 <td align="center"><=$v.content_num/></td>
                 <td align="center"><=$v.show_order/></td>
                 <td align="center"><=$v.create_time/></td>
-                <td align="center"><a class="editbtn" data-id="<=$v.id/>" data-pid="<=$v.parent_id/>" data-parentpath="<=$v.parent_path/>" href="/admin/category/edit-category">编辑</a> | <a class="delbtn" data-id="<=$v.id/>" data-status="<=$v.status/>" href="/admin/category/disable-category"><=$v.status == 1 ? '禁用' : '启用'/></a></td>
+                <td align="center"><a class="editbtn" data-id="<=$v.id/>" data-pid="<=$v.parent_id/>" data-parentpath="<=$v.parent_path/>" href="/admin/category/edit-category">编辑</a> | <a class="delbtn" data-id="<=$v.id/>" data-status="<=$v.status/>" href="/admin/category/switch-category"><=$v.status == 1 ? '禁用' : '启用'/></a></td>
             </tr>
             <loop $sublist[$v.id] $sk $sv/>
             <tr data-pid="<=$v.id/>" class="hide">
@@ -33,7 +33,7 @@
                 <td align="center"><=$sv.content_num/></td>
                 <td align="center"><=$sv.show_order/></td>
                 <td align="center"><=$sv.create_time/></td>
-                <td align="center"><a class="editbtn" data-id="<=$sv.id/>" data-pid="<=$sv.parent_id/>" data-parentpath="<=$sv.parent_path/>" href="/admin/category/edit-category">编辑</a> | <a class="delbtn" data-id="<=$sv.id/>" data-status="<=$sv.status/>" href="/admin/category/disable-category"><=$sv.status == 1 ? '禁用' : '启用'/></a></td>
+                <td align="center"><a class="editbtn" data-id="<=$sv.id/>" data-pid="<=$sv.parent_id/>" data-parentpath="<=$sv.parent_path/>" href="/admin/category/edit-category">编辑</a> | <a class="delbtn" data-id="<=$sv.id/>" data-status="<=$sv.status/>" href="/admin/category/switch-category"><=$sv.status == 1 ? '禁用' : '启用'/></a></td>
             </tr>
             </loop/>
             </loop/>
@@ -127,26 +127,30 @@ $('.delbtn').on('click', function(){
 
     var action  = data.status == 1 ? "禁用" : "启用";
 
-    var content = "确定要" + action + "当前分类吗？";
+    var content = "确定要" + action + "当前栏目吗？";
 
     var url     = $(this).attr('href');
 
     var status  = <=\App\Helper\Enum::STATUS_NORMAL + \App\Helper\Enum::STATUS_DISABLED/> - data.status;
 
-    pWin.showConfirm(content, "分类" + action, function(){
+    var options = {
+        onOk:function(){
 
-        pWin.doRequest(url, {id: data.id, status: status}, function(ret){
+                pWin.doRequest(url, {id: data.id, status: status}, function(ret){
 
-            if(ret.code == 200){
+                    if(ret.code == 200){
 
-                location.reload();
+                        location.reload();
 
-                return;
+                        return;
+                    }
+
+                    pWin.showMsg(ret.message || "切换分类状态出错");
+                });
             }
+    }
 
-            pWin.showMsg(ret.message || "切换分类状态出错");
-        });
-    });
+    pWin.showConfirm(content, "分类" + action, options);
 
     return false;
 })
@@ -177,8 +181,6 @@ $('.editbtn').on('click', function(){
         onOk: function(){
 
             pWin.doRequest(url, $('form', this).serialize(), function(ret){
-
-                console.log(ret.message);
 
                 if(ret.code == 200){
 
