--- a/app/V/admin/category_list.html
+++ b/app/V/admin/category_list.html
@@ -135,7 +135,7 @@
 </define/>
 
 <define name="js"/>
-
+<script type="text/javascript">
 var pWin = window;
 
 var categories = <=json_encode($allCategory ? $allCategory : [])/>;
@@ -419,4 +419,5 @@ function createSelect(parentId, optionList, selectedVal, editable){
 
     return sel;
 }
+</script>
 </define/>
