--- a/app/V/admin/content_list.html
+++ b/app/V/admin/content_list.html
@@ -31,7 +31,7 @@
 </define/>
 
 <define name="js"/>
-
+<script type="text/javascript">
 var pWin = window;
 
 $('.delbtn').on('click', function(){
@@ -67,4 +67,5 @@ $('.delbtn').on('click', function(){
 
     return false;
 })
+</script>
 </define/>
