--- a/app/V/admin/info.html
+++ b/app/V/admin/info.html
@@ -13,6 +13,7 @@
 </define/>
 
 <define name="js"/>
+<script type="text/javascript">
     var timer = document.getElementById('timer');
 
     var _timer = setInterval(function(){
@@ -46,4 +47,5 @@
 
         timer.innerHTML = seconds - 1;
     }
+</script>
 </define/>
