--- a/app/V/admin/template_list.html
+++ b/app/V/admin/template_list.html
@@ -29,7 +29,7 @@
 </define/>
 
 <define name="js"/>
-
+<script type="text/javascript">
 var pWin = window;
 
 $('.delbtn').on('click', function(){
@@ -65,4 +65,5 @@ $('.delbtn').on('click', function(){
 
     return false;
 })
+</script>
 </define/>
