--- a/app/V/admin/login.html
+++ b/app/V/admin/login.html
@@ -67,6 +67,7 @@
     </define/>
 
     <define name="js" />
+    <script type="text/javascript">
         $('form').on('submit', function(){
             $.ajax({
                     url: $(this).attr('action'), 
@@ -92,4 +93,5 @@
             var cap = document.getElementById('vcode');
             cap.src = cap.src + '?' + Math.random(); 
         }
+    </script>
     </define/>
