--- a/app/V/admin/recommend_list.html
+++ b/app/V/admin/recommend_list.html
@@ -72,7 +72,7 @@
 </define/>
 
 <define name="js"/>
-
+<script type="text/javascript">
 var pWin = window;
 
 $('.editbtn').on('click', function(){
@@ -173,4 +173,5 @@ $('.actionBtn').on('click', function(){
 
     return false;
 })
+</script>
 </define/>
