话题发布和话题列表

--- a/app/V/admin/base.html
+++ b/app/V/admin/base.html
@@ -146,7 +146,7 @@
 
         $.ajax({
             url: url,
-            method: 'post',
+            method: data ? 'post' : 'get',
             data: data,
             dataType: 'json',
             success: function(ret){
