--- a/app/V/admin/topic_list.html
+++ b/app/V/admin/topic_list.html
@@ -8,9 +8,7 @@
         <table border="0" align="center" cellpadding="8" cellspacing="0" class="tableBasic w90">
             <tr>
                 <th width="50" align="center">ID</th>
-                <th align="center">标题</th>
                 <th align="center">主播</th>
-                <th align="center">分类</th>
                 <th align="center">打开方式</th>
                 <th align="center">标签</th>
                 <th width="100" align="center">图片数量</th>
@@ -20,23 +18,23 @@
             </tr>
             <loop $list $k $v/>
             <tr>
-                <td align="center"><=$v.id/></td>
-                <td align="left"><=$v.title/></td>
-                <td align="center"><=isset($actors[$v.catid]) ? $actors[$v.catid].nickname : ''/></td>
+                <td align="center"><=$v.tid/></td>
+                <td align="center"><=isset($actors[$v.aid]) ? $actors[$v.aid].nickname : ''/></td>
                 <td align="center"><=isset($contentType[$v.content_type]) ? $contentType[$v.content_type] : ''/></td>
                 <td align="center"><=$v.tags/></td>
                 <td align="center"><=$v.img_count/></td>
                 <td align="center"><=$v.video_url ? 1 : 0/></td>
                 <td align="center"><=$v.audio_url ? 1 : 0/></td>
                 <td align="center">
-                <a href="/admin/template/edit-template?id=<=$v.id/>">编辑</a> | 
-                <a class="delbtn" data-id="<=$v.id/>" data-status="<=$v.status/>" href="/admin/template/switch-template"><=$v.status == 1 ? '禁用' : '启用'/></a>
+                <a onclick="return false" href="/admin/template/edit-template?id=<=$v.tid/>">编辑</a>
+                <if $v.content_type > 1 /> | <a class="regen" href="/admin/topic/reupload?id=<=$v.tid/>">重新生成</a></if/>
+                <if $v.page_url/> | <a href="<=$v.page_url/>" target="__blank">查看</a></if/>
                 </td>
             </tr>
             </loop/>
             <if $pageStr/>
             <tr>
-                <td colspan="10">
+                <td colspan="8">
                     <div class="row">
                         <div class="col-lg-4 adv-table">
                             <div class="dataTables_info">当前第<=$curPage/>/<=$totalPage/>页，共<=$totalRecord/> 条记录
@@ -59,22 +57,18 @@
 <script type="text/javascript">
 var pWin = window;
 
-$('.delbtn').on('click', function(){
+$('.regen').on('click', function(){
 
     var data    = $(this).data();
 
-    var action  = data.status == 1 ? "禁用" : "启用";
-
-    var content = "确定要" + action + "当前文章吗？";
+    var content = "确定要重新生成当前话题吗？";
 
     var url     = $(this).attr('href');
-
-    var status  = <=\App\Helper\Enum::STATUS_NORMAL + \App\Helper\Enum::STATUS_DISABLED/> - data.status;
 
     var options = {
         onOk:function(){
 
-                pWin.doRequest(url, {id: data.id, status: status}, function(ret){
+                pWin.doRequest(url, null, function(ret){
 
                     if(ret.code == 200){
 
@@ -83,12 +77,12 @@ $('.delbtn').on('click', function(){
                         return;
                     }
 
-                    pWin.showMsg(ret.message || "切换分类状态出错");
+                    pWin.showMsg(ret.message || "重新生成文件出错");
                 });
             }
     }
 
-    pWin.showConfirm(content, "分类" + action, options);
+    pWin.showConfirm(content, "文件生成", options);
 
     return false;
 })
