--- a/app/V/admin/topic_list.html
+++ b/app/V/admin/topic_list.html
@@ -27,7 +27,7 @@
                 <td align="center"><=$v.audio_url ? 1 : 0/></td>
                 <td align="center">
                 <a href="/admin/topic/edit-topic?id=<=$v.tid/>">编辑</a>
-                <if $v.content_type > 1 /> | <a class="regen" href="/admin/topic/reupload?id=<=$v.tid/>">重新生成</a></if/>
+                <!--<if $v.content_type > 1 /> | <a class="regen" href="/admin/topic/reupload?id=<=$v.tid/>">重新生成</a></if/>-->
                 <if $v.page_url/> | <a href="<=$v.page_url/>" target="__blank">查看</a></if/>
                 </td>
             </tr>
