--- a/app/V/admin/topic_add.html
+++ b/app/V/admin/topic_add.html
@@ -11,33 +11,21 @@
                     <th width="131"></th>
                     <th></th>
                 </tr>
-                <!-- <tr>
-                    <td align="right">标题</td>
-                    <td><input type="text" name="title" value="" size="80" class="inpMain"> *</td>
-                </tr>
-                <tr>
-                    <td align="right">缩略图</td>
-                    <td>
-                        <div class="imagepath fleft hide">
-                        </div>
-                        <div class="uploadbox fleft">
-                            <div data-bucket="image" data-max="1" id="imagethumb-uploader" data-field="thumb" class="uploader icon-plus icon-large dashed"></div>
-                        </div>
-                        <div class="fleft" style="height: 50px; line-height: 50px; padding-left: 5px;"> * 标题列表中的图片</div>
-                        <div class="clear"></div>
-                    </td>
-                </tr> -->
                 <tr>
                     <td align="right">主播</td>
-                    <td><input type="text" name="actorName" value="" size="10" class="inpMain"> <input type="text" name="actorId" value="1" size="10" class="inpMain" readonly="readonly">*发布为该主播的话题</td>
+                    <td><input type="text" name="actorName" value="" size="10" class="inpMain"> <input type="text" name="actorId" value="1" size="10" class="inpMain" readonly="readonly"> *发布为该主播的话题</td>
+                </tr>
+                <tr>
+                    <td align="right">发布者</td>
+                    <td><input type="text" name="publisher" value="" size="10" class="inpMain"> *发布话题的用户ID</td>
                 </tr>
                 <tr>
                     <td align="right">类型</td>
                     <td class="topic_type">
-                        <label data-target="none"> <input type="radio" name="type" value="1" checked size="80">文字</label>
-                        <label data-target="image"> <input type="radio" name="type" value="2" size="80">图片</label>
-                        <label data-target="video"> <input type="radio" name="type" value="3" size="80">视频</label>
-                        <label data-target="audio"> <input type="radio" name="type" value="4" size="80">音频</label>
+                        <label data-target="none"><input type="radio" name="type" value="1" checked> 文字</label>
+                        <label data-target="image"><input type="radio" name="type" value="2"> 图片</label>
+                        <label data-target="video"><input type="radio" name="type" value="3"> 视频</label>
+                        <label data-target="audio"><input type="radio" name="type" value="4"> 音频</label>
                     </td>
                 </tr>
                 <tr>
@@ -52,7 +40,7 @@
                         <div class="uploadbox fleft">
                             <div data-bucket="image" data-max="9" id="imagelist-uploader" data-field="image" class="uploader icon-plus icon-large dashed"></div>
                         </div>
-                        <div class="fleft" style="height: 50px; line-height: 50px; padding-left: 5px;"> * 最多上传9张图片</div>
+                        <div class="fleft" style="height: 50px; line-height: 50px; padding-left: 5px;"> *最多上传9张图片</div>
                         <div class="clear"></div>
                     </td>
                 </tr>
@@ -64,7 +52,7 @@
                         <div class="uploadbox fleft">
                             <div data-bucket="video" id="video-uploader" data-max="1" data-field="video" class="uploader icon-plus icon-large dashed"></div>
                         </div>
-                        <div class="fleft" style="height: 50px; line-height: 50px; padding-left: 5px;"> * 选择要上传的视频</div>
+                        <div class="fleft" style="height: 50px; line-height: 50px; padding-left: 5px;"> *选择要上传的视频</div>
                         <div class="clear"></div>
                     </td>
                 </tr>
@@ -76,16 +64,16 @@
                         <div class="uploadbox fleft">
                             <div data-bucket="audio" id="audio-uploader" data-max="1" data-field="audio" class="uploader icon-plus icon-large dashed"></div>
                         </div>
-                        <div class="fleft" style="height: 50px; line-height: 50px; padding-left: 5px;"> * 选择要上传的音频</div>
+                        <div class="fleft" style="height: 50px; line-height: 50px; padding-left: 5px;"> *选择要上传的音频</div>
                         <div class="clear"></div>
                     </td>
                 </tr>
                 <tr>
                     <td align="right">打开方式</td>
                     <td>
-                        <label> <input type="radio" name="action" value="1" size="80">原生应用</label>
-                        <label> <input type="radio" name="action" value="2" size="80">内部浏览器</label>
-                        <label> <input type="radio" name="action" value="3" size="80">外部浏览器</label>
+                        <label> <input type="radio" name="action" value="1" size="80"> 原生应用</label>
+                        <label> <input type="radio" name="action" value="2" size="80"> 内部浏览器</label>
+                        <label> <input type="radio" name="action" value="3" size="80"> 外部浏览器</label>
                     </td>
                 </tr>
                 <tr>
