--- a/app/V/admin/moment_add.html
+++ b/app/V/admin/moment_add.html
@@ -17,7 +17,7 @@
                 </tr>
                 <tr>
                     <td align="right">发布者</td>
-                    <td><input type="text" name="publisher" value="" size="10" class="inpMain"> *发布动态的用户ID</td>
+                    <td><input type="text" name="publisher" value="<=$info.uid/>" size="10" class="inpMain"> *发布动态的用户ID</td>
                 </tr>
                 <tr>
                     <td align="right">类型</td>
@@ -174,6 +174,9 @@ function createUploader(_this){
                 $('<div class="imgpreview"><div class="progressbox"><div class="progressbar"></div></div></div>').appendTo($('.imagepath',td));
             },
             UploadComplete: function(uploader, fileinfo){
+
+                console.log(fileinfo);
+
                 var preview = [];
                 var td = $(_this).parent('div').parent('td');
                 var fieldName = field == 'image' ? 'image[]' : field;
