--- a/app/V/admin/moment_add.html
+++ b/app/V/admin/moment_add.html
@@ -22,13 +22,13 @@
                 <tr>
                     <td align="right">类型</td>
                     <td class="topic_type">
-                        <label data-target="none"><input type="radio" name="type" value="1" checked size="80"> 文字</label>
-                        <label data-target="image"><input type="radio" name="type" value="2" size="80"> 图片</label>
-                        <label data-target="video"><input type="radio" name="type" value="3" size="80"> 视频</label>
-                        <label data-target="audio"><input type="radio" name="type" value="4" size="80"> 音频</label>
+                        <label data-target="none"><input type="radio" name="type" value="1"> 文字</label>
+                        <label data-target="image"><input type="radio" name="type" value="2" checked> 图片</label>
+                        <label data-target="video"><input type="radio" name="type" value="3"> 视频</label>
+                        <label data-target="audio"><input type="radio" name="type" value="4"> 音频</label>
                     </td>
                 </tr>
-                <tr id="image_area" class="area hide">
+                <tr id="image_area" class="area">
                     <td></td>
                     <td>
                         <div class="imagepath fleft  hide">
@@ -71,6 +71,16 @@
                     </td>
                 </tr>
                 <tr>
+                    <td align="right">发布日期</td>
+                    <td>
+                        <div class="calendar">
+                            <input type="text" name="create_date" value="<=date('Y-m-d H:i:s')/>" size="80" readonly="readonly" id="create_date">
+                            <div class="create_date clicker laydate-icon"></div>
+                            <div class="clear"></div>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
                     <td align="right">内容正文</td>
                     <td>
                         <input name="content_text" id="content_text" value="" type="hidden" />
@@ -107,7 +117,13 @@
 <script type="text/javascript" src="/jqplugin/qiniu.js"></script>
 <script type="text/javascript" src="/jqplugin/pupload/pupload.full.js"></script>
 <script type="text/javascript" src="/jqplugin/pupload/moxie.js"></script>
+<script type="text/javascript" src="/jqplugin/calendar/laydate.js"></script>
 <script type="text/javascript">
+
+$('.create_date').on('click', function(){
+    laydate.skin('dahong');//切换皮肤，请查看skins下面皮肤库
+    laydate({elem: '#create_date',format: 'YYYY-MM-DD hh:mm:ss', istime: true, istoday: true});//绑定元素
+});
 
 var pWin = window;
 
