--- a/app/V/admin/moment_edit.html
+++ b/app/V/admin/moment_edit.html
@@ -25,12 +25,12 @@
                         <label data-target="audio"> <input type="radio" name="type" value="4"<if $moment.content_type == 4/> checked</if/>>音频</label>
                     </td>
                 </tr>
-                <tr id="image_area" class="area hide">
+                <tr id="image_area" class="area<if $moment.content_type != 2/> hide</if/>">
                     <td></td>
                     <td>
                         <div class="imagepath fleft<if !isset($moment.image) || !$moment.image/> hide</if/>">
                         <loop $moment.image $k $v/>
-                        <div class="imgpreview" data-id="<=$v/>"><input type="hidden" name="image[]" value="<=$v/>"><img height="100%" title="点击删除当前图片" src="<=$v/>"></div>
+                        <div class="imgpreview" data-id="<=$k/>"><input type="hidden" name="image[]" value="<=$v.url/>"><img height="100%" title="点击删除当前图片" src="<=$v.url/>"></div>
                         </loop/>
                         </div>
                         <div class="uploadbox fleft">
@@ -40,7 +40,7 @@
                         <div class="clear"></div>
                     </td>
                 </tr>
-                <tr id="video_area" class="area hide">
+                <tr id="video_area" class="area<if $moment.content_type != 3/> hide</if/>">
                     <td></td>
                     <td>
                         <div class="imagepath fleft<if !$moment.video_url/> hide</if/>">
@@ -53,7 +53,7 @@
                         <div class="clear"></div>
                     </td>
                 </tr>
-                <tr id="audio_area" class="area hide">
+                <tr id="audio_area" class="area<if $moment.content_type != 4/> hide</if/>">
                     <td></td>
                     <td>
                         <div class="imagepath fleft<if !isset($moment.audio_url) || !$moment.audio_url/> hide</if/>">
@@ -70,6 +70,16 @@
                     <td align="right">付费观看</td>
                     <td>
                         <label><input type="checkbox" name="needPay" value="1"<if $moment.needPay /> checked="checked"</if/>> 开启</label>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="right">发布日期</td>
+                    <td>
+                        <div class="calendar">
+                            <input type="text" name="create_date" value="<=$moment.create_time/>" size="80" readonly="readonly" id="create_date">
+                            <div class="create_date clicker laydate-icon"></div>
+                            <div class="clear"></div>
+                        </div>
                     </td>
                 </tr>
                 <tr>
@@ -109,7 +119,13 @@
 <script type="text/javascript" src="/jqplugin/qiniu.js"></script>
 <script type="text/javascript" src="/jqplugin/pupload/pupload.full.js"></script>
 <script type="text/javascript" src="/jqplugin/pupload/moxie.js"></script>
+<script type="text/javascript" src="/jqplugin/calendar/laydate.js"></script>
 <script type="text/javascript">
+
+$('.create_date').on('click', function(){
+    laydate.skin('dahong');//切换皮肤，请查看skins下面皮肤库
+    laydate({elem: '#create_date',format: 'YYYY-MM-DD hh:mm:ss', istime: true, istoday: true});//绑定元素
+});
 
 var content = '<=str_replace("'", "\'", $moment.content_text)/>';
 
