--- a/app/V/admin/topic_add.html
+++ b/app/V/admin/topic_add.html
@@ -22,8 +22,8 @@
                 <tr>
                     <td align="right">类型</td>
                     <td class="topic_type">
-                        <label data-target="none"><input type="radio" name="type" value="1" checked> 文字</label>
-                        <label data-target="image"><input type="radio" name="type" value="2"> 图片</label>
+                        <label data-target="none"><input type="radio" name="type" value="1"> 文字</label>
+                        <label data-target="image"><input type="radio" name="type" value="2" checked> 图片</label>
                         <label data-target="video"><input type="radio" name="type" value="3"> 视频</label>
                         <label data-target="audio"><input type="radio" name="type" value="4"> 音频</label>
                     </td>
@@ -32,7 +32,7 @@
                     <td align="right">模板</td>
                     <td><input type="text" name="template" value="admin/topic_info.html" size="40" class="inpMain"> *生成文件时，使用的页面模板，一般无需修改</td>
                 </tr> -->
-                <tr id="image_area" class="area hide">
+                <tr id="image_area" class="area">
                     <td></td>
                     <td>
                         <div class="imagepath fleft  hide">
@@ -85,11 +85,21 @@
                     </td>
                 </tr>
                 <tr>
+                    <td align="right">发布日期</td>
+                    <td>
+                        <div class="calendar">
+                            <input type="text" name="create_date" value="" size="80" readonly="readonly" id="create_date">
+                            <div class="create_date laydate-icon"></div>
+                            <div class="clear"></div>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
                     <td align="right">热门有效期</td>
                     <td>
                         <div class="calendar">
                             <input type="text" name="hot_expire_after" value="" size="80" readonly="readonly" id="calendar">
-                            <div class="clicker laydate-icon"></div>
+                            <div class="clicker hotexpire laydate-icon"></div>
                             <div class="clear"></div>
                         </div>
                     </td>
@@ -134,10 +144,16 @@
 <script type="text/javascript" src="/jqplugin/calendar/laydate.js"></script>
 <script type="text/javascript">
 
-$('.clicker').on('click', function(){
+$('.hotexpire').on('click', function(){
     laydate.skin('dahong');//切换皮肤，请查看skins下面皮肤库
     laydate({elem: '#calendar',format: 'YYYY-MM-DD hh:mm:ss', istime: true, istoday: true});//绑定元素
-})
+});
+
+$('.create_date').on('click', function(){
+    laydate.skin('dahong');//切换皮肤，请查看skins下面皮肤库
+    laydate({elem: '#create_date',format: 'YYYY-MM-DD hh:mm:ss', istime: true, istoday: true});//绑定元素
+});
+
 var pWin = window;
 
 var data = {};
