--- a/app/V/admin/topic_edit.html
+++ b/app/V/admin/topic_edit.html
@@ -25,16 +25,16 @@
                         <label data-target="audio"> <input type="radio" name="type" value="4"<if $topic.content_type == 4/> checked</if/>>音频</label>
                     </td>
                 </tr>
-                <tr>
+                <!-- <tr>
                     <td align="right">模板</td>
                     <td><input type="text" name="template" value="admin/topic_info.html" size="40" class="inpMain"> *生成文件时，使用的页面模板，一般无需修改</td>
-                </tr>
-                <tr id="image_area" class="area hide">
+                </tr> -->
+                <tr id="image_area" class="area<if $topic.content_type != 2/> hide</if/>">
                     <td></td>
                     <td>
                         <div class="imagepath fleft<if !isset($topic.image) || !$topic.image/> hide</if/>">
                         <loop $topic.image $k $v/>
-                        <div class="imgpreview" data-id="<=$v/>"><input type="hidden" name="image[]" value="<=$v/>"><img height="100%" title="点击删除当前图片" src="<=$v/>"></div>
+                        <div class="imgpreview" data-id="<=$k/>"><input type="hidden" name="image[]" value="<=$v.url/>"><img height="100%" title="点击删除当前图片" src="<=$v.url/>"></div>
                         </loop/>
                         </div>
                         <div class="uploadbox fleft">
@@ -44,7 +44,7 @@
                         <div class="clear"></div>
                     </td>
                 </tr>
-                <tr id="video_area" class="area hide">
+                <tr id="video_area" class="area<if $topic.content_type != 3/> hide</if/>">
                     <td></td>
                     <td>
                         <div class="imagepath fleft<if !$topic.video_url/> hide</if/>">
@@ -57,7 +57,7 @@
                         <div class="clear"></div>
                     </td>
                 </tr>
-                <tr id="audio_area" class="area hide">
+                <tr id="audio_area" class="area<if $topic.content_type != 4/> hide</if/>">
                     <td></td>
                     <td>
                         <div class="imagepath fleft<if !$topic.audio_url/> hide</if/>">
@@ -87,11 +87,21 @@
                     </td>
                 </tr>
                 <tr>
+                    <td align="right">发布日期</td>
+                    <td>
+                        <div class="calendar">
+                            <input type="text" name="create_date" value="<=$topic.create_time/>" size="80" readonly="readonly" id="create_date">
+                            <div class="create_date clicker laydate-icon"></div>
+                            <div class="clear"></div>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
                     <td align="right">热门有效期</td>
                     <td>
                         <div class="calendar">
                             <input type="text" name="hot_expire_after" value="<=$topic.hot_available_time/>" size="80" readonly="readonly" id="calendar">
-                            <div class="clicker laydate-icon"></div>
+                            <div class="hotexpire clicker laydate-icon"></div>
                             <div class="clear"></div>
                         </div>
                     </td>
@@ -136,9 +146,14 @@
 <script type="text/javascript" src="/jqplugin/calendar/laydate.js"></script>
 <script type="text/javascript">
 
-$('.clicker').on('click', function(){
+$('.hotexpire').on('click', function(){
     laydate.skin('dahong');//切换皮肤，请查看skins下面皮肤库
     laydate({elem: '#calendar',format: 'YYYY-MM-DD hh:mm:ss', istime: true, istoday: true});//绑定元素
+})
+
+$('.create_date').on('click', function(){
+    laydate.skin('dahong');//切换皮肤，请查看skins下面皮肤库
+    laydate({elem: '#create_date',format: 'YYYY-MM-DD hh:mm:ss', istime: true, istoday: true});//绑定元素
 })
 
 var content = '<=str_replace("'", "\'", $topic.content_text)/>';
